--- a/views/index.html
+++ b/views/index.html
@@ -6,15 +6,15 @@
     <title>Home</title>
     <link rel="stylesheet" href="/css/main.css" />
   </head>
-  <body>
-    <div class="container">
-      <div>
-        <h3>Login to Chirper</h3>
-        <form action="/#" method="post">
-          <input type="text" name="username" id="" placeholder="Username" />
-          <input type="password" name="password" id="" placeholder="Password" />
-          <button type="submit">Signin</button>
-          <a href="#">Sig up for Chirper</a>
+  <body class="w-[100vw] h-[100vh] bg-blue-300">
+    <div class="container mx-auto w-[100%] h-[100%] flex justify-center items-center ">
+      <div class="w-[50%] p-[50px] bg-white rounded">
+        <h3 class="text-center font-bold text-blue-300 text-lg">Login to Chirper</h3>
+        <form action="/#" method="post" class="flex flex-col   justify-center">
+          <input type="text" name="username" id="" placeholder="Username" class="m-2 p-2 border rounded" />
+          <input type="password" name="password" id="" placeholder="Password"  class="m-2 p-2 border rounded" />
+          <button type="submit" class="btn btn-primary m-2">Signin</button>
+          <a href="#" class="text-center text-blue-300">Sig up for Chirper</a>
         </form>
       </div>
     </div>
