--- a/views/login.html
+++ b/views/login.html
@@ -10,7 +10,7 @@
     <div class="container mx-auto w-[100%] h-[100%] flex justify-center items-center ">
       <div class="w-[50%] p-[50px] bg-white rounded">
         <h3 class="text-center font-bold text-blue-300 text-lg">Login to Chirper</h3>
-        <form action="/#" method="post" class="flex flex-col   justify-center">
+        <form action="/login" method="post" class="flex flex-col   justify-center">
           <input type="text" name="username" id="" placeholder="Username" class="m-2 p-2 border rounded" />
           <input type="password" name="password" id="" placeholder="Password"  class="m-2 p-2 border rounded" />
           <button type="submit" class="btn btn-primary m-2">Signin</button>
